# de-casteljau_algorithm_demo

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  animation.cpp  animation.h  casteljaucanvas.cpp  casteljaucanvas.h  colortoolbutton.cpp  colortoolbutton.h  listview.cpp  listview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pointmodel.cpp  pointmodel.h  settings.cpp  settings.h
